# sparse.tree

./: README.md  pyproject.toml  requirements.txt  setup.py
data/: .gitignore
data/small_set/: download.py
decision-tree-classifier/py/: binary_tree.py  train.py
docs/: DecisionTreeFileFormat.md  RandomForestFileFormat.md
examples/: decision_tree.py  random_forest.py
experiments/decision_trees/: balanced_data_tuning.py  baseline.py  criterion_tuning.py  extract_clf.py  extract_clf.sh  filter_best.py  fontlist-v330.json  generate_entry.py  max_depth_tuning.py  max_features_tuning.py  min_samples_tuning.py  plot_matrices.py  run.experiment.sh  run.sh  run.tune.pbs  run.tuning.slurm  splitter_tuning.py  tables.sty  test.py  tune.py
experiments/decision_trees/baseline/a64fx-square_set-openmp-1000/: test_set.csv  test_targets.csv
experiments/decision_trees/baseline/a64fx-square_set-serial-1000/: test_targets.csv
experiments/decision_trees/baseline/ampere-square_set-cuda-1000/: matrix_stats.csv  test_set.csv  test_targets.csv
experiments/decision_trees/baseline/archer2-square_set-openmp-1000/: matrix_stats.csv  test_set.csv  test_targets.csv
experiments/decision_trees/baseline/archer2-square_set-serial-1000/: matrix_stats.csv
experiments/features/: square_set-features-10.csv
experiments/profiling_runs/: cirrus-square_set-cuda-1000.csv  instinct-square_set-hip-1000.csv
experiments/random_forests/: extract_clf.py  extract_clf.sh  generate_entry.py  run.experiment.sh  run.sh  run.tuning.slurm  test.py  tune.py
experiments/utils/: find_matrices.sh  generate_paths.sh  matrix_list.py  plot_profiling_runs_speedup.py
experiments/utils/profiling-runs/: experiment.csv
experiments/utils/test_lists/: matrices-a64fx-square_set-serial-1000.txt  matrices-ampere-square_set-cuda-1000.txt  matrices-archer2-square_set-openmp-1000.txt  matrices-cirrus-square_set-cuda-1000.txt  matrices-cirrus-square_set-openmp-1000.txt  matrices-cirrus-square_set-serial-1000.txt  matrices-instinct-square_set-hip-1000.txt  matrices-xci-square_set-openmp-1000.txt  matrices-xci-square_set-serial-1000.txt  test-a64fx-square_set-openmp-1000.txt  test-ampere-square_set-cuda-1000.txt  test-archer2-square_set-openmp-1000.txt  test-cirrus-square_set-cuda-1000.txt  test-cirrus-square_set-openmp-1000.txt  test-instinct-square_set-hip-1000.txt  test-xci-square_set-openmp-1000.txt
feature-extraction/: CMakeLists.txt  README.md
feature-extraction/scripts/cirrus/: README.md  TPL.BUILD.md  build.fe.slurm  build.sh  run.fe.slurm  run.sh
feature-extraction/scripts/cirrus/processed/small_set/: features-serial.csv
feature-extraction/scripts/isambard_instinct/: README.md  build.fe.pbs  build.sh  merge_runs.sh  run.fe.pbs  run.sh
feature-extraction/scripts/isambard_instinct/processed/square_set/: features-serial.csv
feature-extraction/src/: CMakeLists.txt  feature-extraction.cpp
profiling-runs/: CMakeLists.txt  README.md
profiling-runs/benchmarks/spmv/: spmv.cpp
profiling-runs/scripts/archer2/: README.md  build.profiling.slurm  build.sh  merge_runs.sh  run.profiling.slurm  run.sh
profiling-runs/scripts/cirrus/: README.md  build.profiling.slurm  build.sh  run.profiling.slurm  run.sh
profiling-runs/scripts/isambard_a64fx/: README.md  build.profiling.pbs  build.sh  merge_runs.sh  run.profiling.pbs  run.sh
profiling-runs/scripts/isambard_ampereq/: README.md  build.sh  merge_runs.sh  run.profiling.pbs  run.sh
profiling-runs/scripts/isambard_instinctq/: README.md  build.sh  merge_runs.sh  run.profiling.pbs  run.sh
profiling-runs/scripts/isambard_xci/: README.md  build.profiling.pbs  build.sh  run.profiling.pbs  run.sh
profiling-runs/src/: CMakeLists.txt  spmv.cpp
sparse_tree/: __init__.py  classifier.py  dataset.py  utils.py
tpl/: TPL.BUILD.Isambard.md
(+128 files in other folders)
