[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse_tree"
version = "0.1.0"
authors = [
  { name="Christodoulos Stylianou", email="c.stylianou@ed.ac.uk" },
]
description = "Sparse Matrix Format Selection using Decision Trees"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]